# IN3110

./: README.md
IN3110-lassepl/: .gitignore  README.md
IN3110-lassepl/assignment1/: friendly_greeting.txt  gitconflict.txt  less_friendly_greeting.txt
IN3110-lassepl/assignment2/: analyze_pollution_data.py
IN3110-lassepl/assignment2/analytic_tools/: utilities.py
IN3110-lassepl/assignment2/tests/: test_utilities.py
IN3110-lassepl/assignment3/: README.md  pyproject.toml  timing-report.txt
IN3110-lassepl/assignment3/in3110_instapy/: cli.py  cython_filters.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
IN3110-lassepl/assignment3/test/: test_numba.py  test_numpy.py  test_python.py
IN3110-lassepl/assignment4/: fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  pyproject.toml  requesting_urls.py  wiki_race_challenge.py
IN3110-lassepl/assignment4/tables_of_anniversaries/: anniversaries_february.md  anniversaries_october.md
IN3110-lassepl/assignment5/: README.md  app.py  strompris.py
IN3110-lassepl/assignment5/docs/: conf.py  (+1 more)
Weekly exercises/: README.md
Weekly exercises/12/: host.py
Weekly exercises/2/: lookatfile.py  testfile.txt
Weekly exercises/3/: find.py  rpn.py
Weekly exercises/4/: blur_image.py  decorators.py
Weekly exercises/5/: ex1.py  ex2.py
Weekly exercises/6/: diff_test.py  superdiff.py  test.txt  test_equal.txt  test_equal_superdiff.txt  test_mod.txt  test_mod2.txt  test_mod_superdiff.txt
Weekly exercises/7-8/: email.py  link_tags.py  more.py  simple_matching.py  substitution.py  url.py
(+38 files in other folders)
